# Profile-Evidence-in-C-IEEE-EPEC-

./: CMakeLists.txt  README.md  main.cpp
include/: ieee14_data.hpp  types.hpp
src/ais/: CMakeLists.txt  ais.cpp  ais.hpp
src/audit/: CMakeLists.txt  audit.cpp  audit.hpp
src/bridge_sampling/: CMakeLists.txt  bridge_sampling.cpp  bridge_sampling.hpp
src/cox_reid/: CMakeLists.txt  cox_reid.cpp  cox_reid.hpp
src/dmis_proposal/: CMakeLists.txt  dmis_proposal.cpp  dmis_proposal.hpp  test_dmis_psis.cpp
src/hessian/: CMakeLists.txt  hessian.cpp  hessian.hpp
src/importance_weights/: CMakeLists.txt  importance_weights.cpp  importance_weights.hpp
src/loglik/: CMakeLists.txt  loglik.cpp  loglik.hpp  test_loglik.cpp
src/logprior/: CMakeLists.txt  logprior.cpp  logprior.hpp  test_logprior.cpp
src/model_dyn/: CMakeLists.txt  model_dyn.cpp  model_dyn.hpp  test_model_dyn.cpp
src/nuclear_compliance/: CMakeLists.txt  nuclear_compliance.cpp  nuclear_compliance.hpp
src/obs_model/: CMakeLists.txt  obs_model.cpp  obs_model.hpp  test_obs_model.cpp
src/optimizer/: CMakeLists.txt  optimizer.cpp  optimizer.hpp  test_optimizer.cpp
src/orchestration/: CMakeLists.txt  orchestration.cpp  orchestration.hpp  test_orchestration.cpp
src/psis/: CMakeLists.txt  psis.cpp  psis.hpp
